Bug 821628 - xptcstubs_x86_64_darwin is wrongly converting some bool params r=bsmedberg