xpcom/reflect/xptcall/src/md/unix/xptcstubs_x86_64_solaris.cpp
@@ -108,7 +108,8 @@ PrepareAndDispatch(nsXPTCStubBase * self, uint32_t methodIndex,
         case nsXPTType::T_U16:     dp->val.u16 = (uint16_t) value; break;
         case nsXPTType::T_U32:     dp->val.u32 = (uint32_t) value; break;
         case nsXPTType::T_U64:     dp->val.u64 = (uint64_t) value; break;
-        case nsXPTType::T_BOOL:    dp->val.b   = (bool)   value; break;
+        // Cast to uint8_t first, to remove garbage on upper 56 bits.
+        case nsXPTType::T_BOOL:    dp->val.b   = (bool)(uint8_t)   value; break;
         case nsXPTType::T_CHAR:    dp->val.c   = (char)     value; break;
         case nsXPTType::T_WCHAR:   dp->val.wc  = (wchar_t)  value; break;
 
